--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,58 @@
     grid-column: 2;
     grid-row: 3/5;
 }
+
+@media(max-width:748px){
+
+    .container-grid{
+
+        display: grid;
+        width: 100%;
+        height: 850px;
+        grid-template-columns:repeat(2, 1fr);
+        grid-template-rows:repeat(8, 1fr);
+        gap: 20px;
+        padding: 5px;
+       
+        .sale1{grid-area: sale1;
+            grid-column: 1/span 2;
+            grid-row: 1;
+        
+        }
+        .sale2{grid-area: sale2;
+            grid-column: 1/span 2;
+            grid-row: 2;
+            
+        }
+        
+        .sale3{grid-area: sale3;
+            grid-column: 1/3;
+            grid-row: 5;
+        }
+        
+        .sale4{grid-area: sale4;
+            grid-column: 1/3;
+            grid-row: 6;
+        }
+        
+        .product1{grid-area: product1;
+            grid-column: 1;
+            grid-row: 7/ span 8;
+        
+        }
+        
+        .product2{grid-area: product2;
+            grid-column: 2;
+            grid-row: 7/ span 8;
+        }
+        
+        .product3{grid-area: product3;
+            grid-column: 1;
+            grid-row: 3/5;
+        }
+        
+        .product4{grid-area: product4;
+            grid-column: 2;
+            grid-row: 3/ 5;
+        }
+}
